--- a/project.config.json
+++ b/project.config.json
@@ -33,12 +33,19 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "书籍",
-					"pathName": "pages/book/book"
+					"pathName": "pages/book/book",
+					"query": ""
+				},
+				{
+					"id": 1,
+					"name": "书籍详情",
+					"pathName": "pages/book-detail/book-detail",
+					"query": "bid=65"
 				}
 			]
 		}
