--- a/project.config.json
+++ b/project.config.json
@@ -33,7 +33,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -46,6 +46,12 @@
 					"name": "书籍详情",
 					"pathName": "pages/book-detail/book-detail",
 					"query": "bid=7"
+				},
+				{
+					"id": -1,
+					"name": "书籍详情",
+					"pathName": "pages/my/my",
+					"query": ""
 				}
 			]
 		}
